--- a/starwars/home/templates/index.html
+++ b/starwars/home/templates/index.html
@@ -636,7 +636,7 @@ $(window).resize (function () {
                             </td>{% endifequal %}{% endfor %}
 
                             <td class="sub-menu-tbl-item-rhs text" id="show-vehicles-text">
-                                <a id="text-vehicle">Show Vehicles</a>
+                                <a id="text-vehicle">Vehicles</a>
                             </td>
                             <td class="sub-menu-tbl-item-rhs icon" id="show-vehicles-icon">
                             <img alt="Show Vehicles"
@@ -645,7 +645,7 @@ $(window).resize (function () {
                             </td>
 
                             <td class="sub-menu-tbl-item-rhs text" id="show-figures-text">
-                                <a id="text-figure">Show Figures</a>
+                                <a id="text-figure">Figures</a>
                             </td>
                             <td class="sub-menu-tbl-item-rhs icon" id="show-figures-icon">
                             <img alt="Show Figures"
