--- a/starwars/media/css/style.css
+++ b/starwars/media/css/style.css
@@ -510,6 +510,27 @@ div.img.x-large img {
 }
 
 /* -------------------------------------------------------------------------
+ * Image X-Info
+ * ------------------------------------------------------------------------- */
+
+div.img.x-info {
+    background-color: #808080;
+}
+
+div.img.x-info {
+    text-align: center;
+    text-decoration: none;
+    font-size: x-small;
+    font-weight: normal;
+    color: white;
+}
+
+div.img.x-info img {
+    height: 100%;
+    width: 100%;
+}
+
+/* -------------------------------------------------------------------------
  * Gallery: Image Footer
  * ------------------------------------------------------------------------- */
 
@@ -533,7 +554,7 @@ div.gallery .img .footer.blue {
 }
 
 /* -------------------------------------------------------------------------
- * Gallery: Image Info
+ * Gallery: Image Magnify
  * ------------------------------------------------------------------------- */
 
 div.gallery .img .magnify {
